--- a/templates/post.html
+++ b/templates/post.html
@@ -7,6 +7,9 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/post.css') }}">
+
+    <!-- CKEditor Script -->
+    {{ ckeditor.load() }}
     
 </head>
 <body>
