--- a/templates/post.html
+++ b/templates/post.html
@@ -38,6 +38,19 @@
             </div>
         </article>
 
+        <!-- Comments Section -->
+        <section class="comments-section">
+            <h2>Comments</h2>
+
+            <!-- Comments Form -->
+            <form action="{{ url_for('add_comment', post_id=post.id) }}" method="POST">
+                {{ ckeditor.config(name='comment', value='', width='100%') }}
+                <button type="submit" class="submit-btn">Add Comment</button>
+            </form>
+
+            
+        </section>
+
         <!-- Back to Blog Button -->
         <div class="back-btn-container">
             <a href="{{ url_for('blogs') }}" class="back-btn">Back to Blogs</a>
